# pgexodus

./: .gitignore  CMakeLists.txt  FindPostgreSQL2.cmake  README.md  install.sh  install.sql.in  pgexodus.control.in  pgexodus.sql
.github/workflows/: build.yml  cmake-single-platform.yml  cmake-ubuntu.yml
cmake/: FindPostgreSQL.cmake
src/: CMakeLists.txt  count.c  extract.c  extract2.c  extract_date.c  extract_datetime.c  extract_number.c  extract_text.c  extract_time.c  getinputstartlength.c  getinputstartlength.cpp  pgexodus--1.0.sql  pgexodus.c  pgexodus.h
src/expected/: basic.out
src/old/: extract_bytea.c  extract_text2.c  pgexodus_old_monolithic.c
src/sql/: basic.sql
